Fixing opcion align Sidebars, fixng menu mobil

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -1,10 +1,58 @@
 @media (min-width: 1200px){
-	#sidebar1{
-		+  #main{
-			padding-left: 2.564102564102564%;
-			padding-right: 2.564102564102564%;
+	.fixed{	
+		&.sb1{
+			#sidebar1:first-child{
+				+  #main{
+					padding-left: 1.284103%;
+					padding-right: 1.284103%;
+				}
+			}
+		}
+		&.sb2{
+			#sidebar2:first-child{
+				+  #main{
+					padding-left: 1.284103%;
+					padding-right: 1.284103%;
+				}
+			}
+		}
+		#main:first-child{
+			#above-content [class^="module"]:first-child>h3::before{
+				.box-sizing(content-box);
+				margin-left: -3.564102564102564%;
+				margin-right: -3.564102564102564%;
+				padding-left: 3.564102564102564%;
+				padding-right: 3.564102564102564%;
+			}
+		}
+		&.sb2{
+			#main:first-child #above-content [class^="module"]:first-child>h3::before{
+				padding-right: 30px;
+				margin-right: -30px;				
+			}
+		}
+		&.sb1{
+			#main:first-child #above-content [class^="module"]:first-child>h3::before{
+				padding-right: 30px;
+				margin-right: -30px;				
+			}
+		}
+		&.sb1.sb2{
+			#sidebar1:first-child{
+				+ #main{
+					padding-left: 2.53877%;
+					padding-right: 2.53877%;
+				}
+			}
+			#sidebar2:first-child{
+				+ #main{
+					padding-left: 2.53877%;
+					padding-right: 2.53877%;
+				}
+			}
 		}
 	}
+
 }
 
 @media (max-width: 1199px) {
@@ -37,7 +85,15 @@
 		#header .navbar-fixed-top .navbar-inner, 
 		#header .navbar-fixed-bottom .navbar-inner{
 			border-bottom: 1px solid @navbarInverseBorder;
-		}	
+		}
+		&.sb1.sb2{
+			#sidebar1:first-child{
+				+ #main{
+					padding-left: 2.72766%;
+					padding-right: 2.72766%;
+				}
+			}
+		}
 	}
 	#footer{
 		.navbar-inner{
@@ -56,7 +112,87 @@
 			max-width: 100%;
 		}
 	}
+	#logo{
+		width: 60%;
+	}
+	.wrapper-toolbar{
+		position: relative;
+	}
 	#toolbar{ 
+		vertical-align: top;
+		width: 37%;
+		margin-left: 0;
+		.btn-navbar{
+			.box-sizing(border-box);
+			border-right: 1px solid @btnPrimaryColor;
+			float: left;
+			margin: 0;
+			min-height: 80px;
+			width: 80px;
+			padding:30px 20px 20px;
+			.icon-bar{
+				margin-bottom: 7px;
+				width: 100%;
+			}
+		}
+		.nav-collapse{
+			.box-sizing(border-box);
+			left: 0;
+			padding-left: 10px;
+			padding-right: 10px;
+			position: absolute;
+			top: 80px;
+			width: 100%;
+			z-index: 90;
+			.nav {
+				margin-left: 10px;
+				background-color: @btnNavbar;
+				> li {
+					position: relative;
+						&:after{
+							background-color: @btnNavbar;
+							content: '';
+							height: 100%;
+							position: absolute;
+							right: 100%;
+							top: 0;
+							width: 10px;
+						}
+						&:hover {
+							&:after{
+								background-image: url(../images/bg-navbarlink-hover.png);
+								background-color: transparent;
+								background-position: 0 -5px;
+							}
+						}
+						&.active {
+							&:after{
+								background-image: url(../images/bg-navbarlink-hover.png);
+								background-color: transparent;
+								background-position: 0 -5px;
+							}	
+						}
+				}
+				.dropdown-menu{
+					position: relative;
+					&:after{
+						background-color: @btnNavbar;
+						content: '';
+						display: block;
+						height: 104%;
+						position: absolute;
+						left:-20px;
+						top: 0;
+						width: 10px;
+					}
+					.dropdown-menu{
+						&:after{
+							background-color:@btnPrimaryColor;
+						}
+					}
+				}
+			}
+		}
 		.nav {
 			display: block;
 			li{
@@ -82,9 +218,10 @@
 				padding-bottom: 2px;
 			}
 			&:hover a{
-				background-color: transparent;
+				background-color: transparent !important;
 			}
 		}
+
 		.dropdown-menu {
 			background-color: @dropdownBackground;
 			margin-left: 10px;
@@ -109,6 +246,23 @@
 				}
 				&.parent{
 					padding-bottom: 2px;
+					.icon-caret-right{
+						display: inline-block;
+						float: none;
+						margin-left: -20%;
+						margin-top: 0;
+						padding: 0;
+						width: 100%;
+						&::after{
+							border-bottom: none;
+							font-size: 20px;
+						}
+					}
+					&:hover{
+						.icon-caret-right{
+							background-color: transparent;
+						}
+					}
 				}
 			}
 			.dropdown-menu{
@@ -121,12 +275,56 @@
 					background-color: @dropdownBackground;
 					content: '';
 					display: block;
-					height: 103%;
+					height: 102%;
 					position: absolute;
 					left:-20px;
 					top: 0;
 					width: 10px;
 				}
+			}
+		}
+	}
+	.navbar-inverse {
+		.nav li.dropdown{
+			>.dropdown-toggle .caret {
+				background-image: none;
+				border: none;
+				float: right;
+				font-family: FontAwesome;
+				height: 6px;
+				margin-top: 0;
+				width: 17px;
+				&::before{
+					color:@dropdownBackground;
+					content: "\f0da";
+					font-size: 20px;
+				}
+			}
+			&:hover{
+				>.dropdown-toggle .caret{
+					background-image: none;
+				}	
+			}
+		}
+		li a:hover{
+			background-color: transparent;
+		}
+		.nav{
+			> li:hover > a , > .active > a{
+				color: @dropdownLinkColorHover;
+				.caret{
+					&::before{
+						color: @dropdownLinkColorHover !important;
+						content: "\f0d7" !important;
+					}
+				}
+			}
+		}
+		.dropdown-menu > li:hover > a,.dropdown-menu > .active > a{
+			color: @dropdownLinkColorHover;
+			> .icon-caret-right::before{
+				content: "\f0d7";
+				color: @dropdownLinkColorHover !important;
 			}
 		}
 	}
@@ -231,10 +429,20 @@
 				padding-right: 20px !important;
 			}
 		}
-		#sidebar1 {
-			+ #main{
-				padding-left: 0;
-				padding-right: 0;
+		&.sb1 {
+			#sidebar1:first-child {
+				+ #main{
+					padding-left: 0;
+					padding-right: 0;
+				}
+			}
+		}
+		&.sb2 {
+			#sidebar2:first-child {
+				+ #main{
+					padding-left: 0;
+					padding-right: 0;
+				}
 			}
 		}
 	}
@@ -251,6 +459,17 @@
 					content: none;
 					display: none;
 					width: 0;		
+				}
+			}
+		}
+	}
+	.navbar-inner {
+		.dropdown-menu {
+			li{
+				&.parent{
+					.icon-caret-right{
+						width: 70%;
+					}
 				}
 			}
 		}
